--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -11,5 +11,9 @@ stages:
       buildContext: .
       tag: demo
       registry: 127.0.0.1:34490
+- name: deploy
+  steps:
+  - applyYamlConfig:
+      path: ./deployment.yaml
 timeout: 60
 notification: {}
