--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -3,7 +3,7 @@ stages:
   steps:
   - runScriptConfig:
       image: maven
-      shellScript: package -Dmaven.test.skip=true
+      shellScript: mvn clean package -Dmaven.test.skip=true
 - name: publish
   steps:
   - publishImageConfig:
