Update .rancher-pipeline.yml file

--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -9,7 +9,7 @@ stages:
   - publishImageConfig:
       dockerfilePath: ./Dockerfile
       buildContext: .
-      tag: demo
+      tag: demo:${CICD_EXECUTION_SEQUENCE}
       registry: 127.0.0.1:34490
 - name: deploy
   steps:
