--- a/deployment.yaml
+++ b/deployment.yaml
@@ -10,7 +10,7 @@ spec:
     - protocol: TCP
       port: 30001
       targetPort: 30001
-      nodePort: 30001
+      # nodePort: 30001
 ---
 apiVersion: apps/v1
 kind: Deployment
